--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Find hadeeth bot",
   "main": "index.js",
   "dependencies": {
-    "telegraf": "^3.30.1"
+    "node-telegram-bot-api": "^0.30.0",
+    "telegraf": "^3.30.1",
+    "telegraf-inline-menu": "^3.6.0"
   },
   "devDependencies": {},
   "scripts": {
